# filigrane-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_auth_users_sessions_magic_follows.py  002_sources_pins.py  003_comments_reactions_notifications.py  004_magic_login_allowlist.py  005_allowlist_thienyx_gmail.py
src/filigrane_api/: __init__.py  deps.py  main.py  traffic.py
src/filigrane_api/core/: config.py  db.py  logging_config.py  notify_hub.py  principal.py  security.py
src/filigrane_api/middleware/: request_id.py
src/filigrane_api/models/: __init__.py  auth_tokens.py  entities.py  enums.py  magic_allowlist.py
src/filigrane_api/routes/: auth.py  health.py  internal_access.py  workspace.py
src/filigrane_api/schemas/: payloads.py
src/filigrane_api/scripts/: bootstrap_seed.py
src/filigrane_api/services/: __init__.py  auth_flow.py  comments_ops.py  email_dispatch.py  email_identity.py  feed_ops.py  magic_allowlist_ops.py  notifications_ack_ops.py  page_analytics.py  pins_ops.py  reactions_ops.py  resolve_ops.py  social_graph_ops.py  social_notifications.py  source_metadata.py  source_ops.py  url_canonical.py
src/filigrane_api/utils/: time.py
tests/: conftest.py  test_health.py
