[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filigrane-api"
version = "0.1.0"
description = "Filigrane REST API (pins, reactions, feed) for Chrome extension and web."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.1,<4",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<1",
  "python-multipart>=0.0.9,<1",
  "structlog>=24,<26",
  "slowapi>=0.1.9,<1",
  "selectolax>=0.3,<1",
  "email-validator>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "httpx>=0.27,<1",
  "ruff>=0.9,<1",
  "mypy>=1.11,<2",
  "asyncpg-stubs>=0.7; python_version>='3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
  'ignore::DeprecationWarning',
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = "selectolax.*"
ignore_missing_imports = true
